--- a/painel/css/style.css
+++ b/painel/css/style.css
@@ -237,6 +237,67 @@ div.box-usuario {
     font-weight: 300;
 }
 
+/* Tabelas */
+
+.wrapper-table {
+    overflow-x: auto;
+}
+
+table {
+    margin: 20px 0;
+    width: 100%;
+    border-collapse: collapse;
+}
+
+table tr:nth-of-type(1) {
+    background: #0091ea;
+    color: white;
+}
+
+table tr  {
+    color: #555;
+    border-bottom: 1px solid #ccc;
+}
+
+table td {
+    padding: 8px;
+}
+
+table a.btn {
+    display: inline-block;
+    text-decoration: none;
+    padding: 4px 6px;
+    color: white;
+    font-size: 13px;
+}
+
+.paginacao {
+    margin: 20px 0;
+    text-align: center;
+}
+
+.paginacao a {
+    font-size: 14px;
+    margin: 0 18px;
+    display: inline-block;
+    padding: 3px 4px;
+    border: 1px solid #ccc;
+    text-decoration: none;
+    color: #666;
+}
+
+.paginacao a.page-selected {
+    background: rgb(220, 220, 220);
+}
+
+.delete {
+    background: #E05C4E;
+}
+
+.edit {
+    background: #F4B03E;
+}
+
 .box-metricas{
 	margin-top:16px;
 	padding:0 15px;
@@ -322,6 +383,18 @@ div.box-usuario {
     width: 100%;
     height: 40px;
     padding-left: 8px;
+}
+
+.box-content textarea {
+    margin-top: 8px;
+    font-size: 16px;
+    font-weight: normal;
+    color: black;
+    width: 100%;
+    height: 150px;
+    border: 1px solid #ccc;
+    padding: 8px;
+    resize: vertical;
 }
 
 .box-content form input[type=file] {
