Adicionamos o método que realiza modificações no frontend do site

--- a/painel/css/style.css
+++ b/painel/css/style.css
@@ -233,6 +233,10 @@ div.box-usuario {
     border-bottom: 2px solid #2F3D42;
 }
 
+.menu-active {
+    background: #3a4b51;
+}
+
 .box-content > h2 {
     font-weight: 300;
 }
@@ -244,9 +248,11 @@ div.box-usuario {
 }
 
 table {
-    margin: 20px 0;
-    width: 100%;
-    border-collapse: collapse;
+    font-weight: 300;
+	min-width: 900px;
+	margin:20px 0;
+	width: 100%;
+	border-collapse: collapse;
 }
 
 table tr:nth-of-type(1) {
@@ -270,6 +276,8 @@ table a.btn {
     color: white;
     font-size: 13px;
 }
+
+/* Paginacao */
 
 .paginacao {
     margin: 20px 0;
@@ -296,6 +304,10 @@ table a.btn {
 
 .edit {
     background: #F4B03E;
+}
+
+.order {
+    background: #0091ea;
 }
 
 .box-metricas{
@@ -419,10 +431,6 @@ table a.btn {
     color: white;
 }
 
-.menu-active {
-    background: #3a4b51;
-}
-
 .menu-active:before {
     content: '> ';
 }
@@ -454,17 +462,6 @@ table a.btn {
         left: 0;
         width: 100%;
     }
-}
-
-.form-group-login label {
-    font-size: 13px;
-    font-weight: 300;
-    color: black;
-}
-
-form .form-group-login:nth-of-type(2) {
-    position: relative;
-    top: 20px;
 }
 
 @media screen and (max-width: 500px) {
